--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.286.0",
     "react": "^18.2.0",
